--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
+  "scripts": {
+    "dev": "npm run dev",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
@@ -31,12 +37,7 @@
     "swiper": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "dev": "npm run dev",
-    "build": "npm run build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
+ 
   "eslintConfig": {
     "extends": [
       "react-app",
